// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StackChart matches the snapshot a simple chart render 1`] = `
Array [
  Array [
    "set font",
    "10px sans-serif",
  ],
  Array [
    "measureText",
    "abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ.()< /:-_",
  ],
  Array [
    "measureText",
    "…",
  ],
  Array [
    "set fillStyle",
    "#ffffff",
  ],
  Array [
    "fillRect",
    0,
    0,
    365,
    300,
  ],
  Array [
    "set fillStyle",
    "#45a1ff",
  ],
  Array [
    "fillRect",
    150,
    1,
    200,
    13,
  ],
  Array [
    "measureText",
    "https://mozilla.org",
  ],
  Array [
    "set fillStyle",
    "white",
  ],
  Array [
    "fillText",
    "https://mozilla.org",
    153,
    11,
  ],
  Array [
    "set fillStyle",
    "#45a1ff",
  ],
  Array [
    "fillRect",
    160,
    17,
    179,
    13,
  ],
  Array [
    "measureText",
    "Interpreter",
  ],
  Array [
    "set fillStyle",
    "white",
  ],
  Array [
    "fillText",
    "Interpreter",
    163,
    27,
  ],
  Array [
    "set fillStyle",
    "#45a1ff",
  ],
  Array [
    "fillRect",
    339,
    18,
    0.9999999999999745,
    11,
  ],
  Array [
    "fillRect",
    170,
    33,
    160,
    13,
  ],
  Array [
    "measureText",
    "IonMonkey",
  ],
  Array [
    "set fillStyle",
    "white",
  ],
  Array [
    "fillText",
    "IonMonkey",
    173,
    43,
  ],
  Array [
    "set fillStyle",
    "#ededf0",
  ],
  Array [
    "fillRect",
    149,
    0,
    1,
    300,
  ],
  Array [
    "fillRect",
    0,
    15,
    365,
    1,
  ],
  Array [
    "fillRect",
    0,
    31,
    365,
    1,
  ],
  Array [
    "fillRect",
    0,
    47,
    365,
    1,
  ],
  Array [
    "set fillStyle",
    "#000000",
  ],
  Array [
    "measureText",
    "Tracing Information",
  ],
  Array [
    "fillText",
    "Tracing Information",
    5,
    11,
  ],
  Array [
    "set font",
    "10px sans-serif",
  ],
  Array [
    "measureText",
    "abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ.()< /:-_",
  ],
  Array [
    "measureText",
    "…",
  ],
  Array [
    "set fillStyle",
    "#ffffff",
  ],
  Array [
    "fillRect",
    0,
    0,
    365,
    300,
  ],
  Array [
    "set fillStyle",
    "#45a1ff",
  ],
  Array [
    "fillRect",
    150,
    1,
    200,
    13,
  ],
  Array [
    "measureText",
    "https://mozilla.org",
  ],
  Array [
    "set fillStyle",
    "white",
  ],
  Array [
    "fillText",
    "https://mozilla.org",
    153,
    11,
  ],
  Array [
    "set fillStyle",
    "#45a1ff",
  ],
  Array [
    "fillRect",
    160,
    17,
    179,
    13,
  ],
  Array [
    "measureText",
    "Interpreter",
  ],
  Array [
    "set fillStyle",
    "white",
  ],
  Array [
    "fillText",
    "Interpreter",
    163,
    27,
  ],
  Array [
    "set fillStyle",
    "#45a1ff",
  ],
  Array [
    "fillRect",
    339,
    18,
    0.9999999999999745,
    11,
  ],
  Array [
    "fillRect",
    170,
    33,
    160,
    13,
  ],
  Array [
    "measureText",
    "IonMonkey",
  ],
  Array [
    "set fillStyle",
    "white",
  ],
  Array [
    "fillText",
    "IonMonkey",
    173,
    43,
  ],
  Array [
    "set fillStyle",
    "#ededf0",
  ],
  Array [
    "fillRect",
    149,
    0,
    1,
    300,
  ],
  Array [
    "fillRect",
    0,
    15,
    365,
    1,
  ],
  Array [
    "fillRect",
    0,
    31,
    365,
    1,
  ],
  Array [
    "fillRect",
    0,
    47,
    365,
    1,
  ],
  Array [
    "set fillStyle",
    "#000000",
  ],
  Array [
    "measureText",
    "Tracing Information",
  ],
  Array [
    "fillText",
    "Tracing Information",
    5,
    11,
  ],
]
`;

exports[`StackChart matches the snapshot for an inverted draw call 1`] = `
Array [
  Array [
    "set font",
    "10px sans-serif",
  ],
  Array [
    "measureText",
    "abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ.()< /:-_",
  ],
  Array [
    "measureText",
    "…",
  ],
  Array [
    "set fillStyle",
    "#ffffff",
  ],
  Array [
    "fillRect",
    0,
    0,
    365,
    300,
  ],
  Array [
    "set fillStyle",
    "#45a1ff",
  ],
  Array [
    "fillRect",
    150,
    1,
    200,
    13,
  ],
  Array [
    "measureText",
    "https://mozilla.org",
  ],
  Array [
    "set fillStyle",
    "white",
  ],
  Array [
    "fillText",
    "https://mozilla.org",
    153,
    11,
  ],
  Array [
    "set fillStyle",
    "#45a1ff",
  ],
  Array [
    "fillRect",
    160,
    17,
    179,
    13,
  ],
  Array [
    "measureText",
    "Interpreter",
  ],
  Array [
    "set fillStyle",
    "white",
  ],
  Array [
    "fillText",
    "Interpreter",
    163,
    27,
  ],
  Array [
    "set fillStyle",
    "#45a1ff",
  ],
  Array [
    "fillRect",
    339,
    18,
    0.9999999999999745,
    11,
  ],
  Array [
    "fillRect",
    170,
    33,
    160,
    13,
  ],
  Array [
    "measureText",
    "IonMonkey",
  ],
  Array [
    "set fillStyle",
    "white",
  ],
  Array [
    "fillText",
    "IonMonkey",
    173,
    43,
  ],
  Array [
    "set fillStyle",
    "#ededf0",
  ],
  Array [
    "fillRect",
    149,
    0,
    1,
    300,
  ],
  Array [
    "fillRect",
    0,
    15,
    365,
    1,
  ],
  Array [
    "fillRect",
    0,
    31,
    365,
    1,
  ],
  Array [
    "fillRect",
    0,
    47,
    365,
    1,
  ],
  Array [
    "set fillStyle",
    "#000000",
  ],
  Array [
    "measureText",
    "Tracing Information",
  ],
  Array [
    "fillText",
    "Tracing Information",
    5,
    11,
  ],
  Array [
    "set font",
    "10px sans-serif",
  ],
  Array [
    "measureText",
    "abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ.()< /:-_",
  ],
  Array [
    "measureText",
    "…",
  ],
  Array [
    "set fillStyle",
    "#ffffff",
  ],
  Array [
    "fillRect",
    0,
    0,
    365,
    300,
  ],
  Array [
    "set fillStyle",
    "#45a1ff",
  ],
  Array [
    "fillRect",
    150,
    1,
    200,
    13,
  ],
  Array [
    "measureText",
    "https://mozilla.org",
  ],
  Array [
    "set fillStyle",
    "white",
  ],
  Array [
    "fillText",
    "https://mozilla.org",
    153,
    11,
  ],
  Array [
    "set fillStyle",
    "#45a1ff",
  ],
  Array [
    "fillRect",
    160,
    17,
    179,
    13,
  ],
  Array [
    "measureText",
    "Interpreter",
  ],
  Array [
    "set fillStyle",
    "white",
  ],
  Array [
    "fillText",
    "Interpreter",
    163,
    27,
  ],
  Array [
    "set fillStyle",
    "#45a1ff",
  ],
  Array [
    "fillRect",
    339,
    18,
    0.9999999999999745,
    11,
  ],
  Array [
    "fillRect",
    170,
    33,
    160,
    13,
  ],
  Array [
    "measureText",
    "IonMonkey",
  ],
  Array [
    "set fillStyle",
    "white",
  ],
  Array [
    "fillText",
    "IonMonkey",
    173,
    43,
  ],
  Array [
    "set fillStyle",
    "#ededf0",
  ],
  Array [
    "fillRect",
    149,
    0,
    1,
    300,
  ],
  Array [
    "fillRect",
    0,
    15,
    365,
    1,
  ],
  Array [
    "fillRect",
    0,
    31,
    365,
    1,
  ],
  Array [
    "fillRect",
    0,
    47,
    365,
    1,
  ],
  Array [
    "set fillStyle",
    "#000000",
  ],
  Array [
    "measureText",
    "Tracing Information",
  ],
  Array [
    "fillText",
    "Tracing Information",
    5,
    11,
  ],
  Array [
    "set font",
    "10px sans-serif",
  ],
  Array [
    "measureText",
    "abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ.()< /:-_",
  ],
  Array [
    "measureText",
    "…",
  ],
  Array [
    "set fillStyle",
    "#ffffff",
  ],
  Array [
    "fillRect",
    0,
    0,
    365,
    300,
  ],
  Array [
    "set fillStyle",
    "#45a1ff",
  ],
  Array [
    "fillRect",
    160,
    1,
    10,
    13,
  ],
  Array [
    "measureText",
    "Interpreter",
  ],
  Array [
    "set fillStyle",
    "white",
  ],
  Array [
    "fillText",
    "…",
    163,
    11,
  ],
  Array [
    "set fillStyle",
    "#45a1ff",
  ],
  Array [
    "fillRect",
    330,
    1,
    9,
    13,
  ],
  Array [
    "set fillStyle",
    "white",
  ],
  Array [
    "fillText",
    "…",
    333,
    11,
  ],
  Array [
    "set fillStyle",
    "#45a1ff",
  ],
  Array [
    "fillRect",
    339,
    2,
    0.9999999999999872,
    11,
  ],
  Array [
    "fillRect",
    170,
    17,
    160,
    13,
  ],
  Array [
    "measureText",
    "IonMonkey",
  ],
  Array [
    "set fillStyle",
    "white",
  ],
  Array [
    "fillText",
    "IonMonkey",
    173,
    27,
  ],
  Array [
    "set fillStyle",
    "#45a1ff",
  ],
  Array [
    "fillRect",
    150,
    33,
    10,
    13,
  ],
  Array [
    "measureText",
    "https://mozilla.org",
  ],
  Array [
    "set fillStyle",
    "white",
  ],
  Array [
    "fillText",
    "…",
    153,
    43,
  ],
  Array [
    "set fillStyle",
    "#45a1ff",
  ],
  Array [
    "fillRect",
    340,
    33,
    10,
    13,
  ],
  Array [
    "set fillStyle",
    "white",
  ],
  Array [
    "fillText",
    "…",
    343,
    43,
  ],
  Array [
    "set fillStyle",
    "#45a1ff",
  ],
  Array [
    "fillRect",
    350,
    34,
    0.100000000000008,
    11,
  ],
  Array [
    "set fillStyle",
    "#ededf0",
  ],
  Array [
    "fillRect",
    149,
    0,
    1,
    300,
  ],
  Array [
    "fillRect",
    0,
    15,
    365,
    1,
  ],
  Array [
    "fillRect",
    0,
    31,
    365,
    1,
  ],
  Array [
    "fillRect",
    0,
    47,
    365,
    1,
  ],
  Array [
    "set fillStyle",
    "#000000",
  ],
  Array [
    "fillText",
    "Interpreter",
    5,
    11,
  ],
  Array [
    "fillText",
    "IonMonkey",
    5,
    27,
  ],
  Array [
    "measureText",
    "Script",
  ],
  Array [
    "fillText",
    "Script",
    5,
    43,
  ],
  Array [
    "set font",
    "10px sans-serif",
  ],
  Array [
    "measureText",
    "abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ.()< /:-_",
  ],
  Array [
    "measureText",
    "…",
  ],
  Array [
    "set fillStyle",
    "#ffffff",
  ],
  Array [
    "fillRect",
    0,
    0,
    365,
    300,
  ],
  Array [
    "set fillStyle",
    "#45a1ff",
  ],
  Array [
    "fillRect",
    160,
    1,
    10,
    13,
  ],
  Array [
    "measureText",
    "Interpreter",
  ],
  Array [
    "set fillStyle",
    "white",
  ],
  Array [
    "fillText",
    "…",
    163,
    11,
  ],
  Array [
    "set fillStyle",
    "#45a1ff",
  ],
  Array [
    "fillRect",
    330,
    1,
    9,
    13,
  ],
  Array [
    "set fillStyle",
    "white",
  ],
  Array [
    "fillText",
    "…",
    333,
    11,
  ],
  Array [
    "set fillStyle",
    "#45a1ff",
  ],
  Array [
    "fillRect",
    339,
    2,
    0.9999999999999872,
    11,
  ],
  Array [
    "fillRect",
    170,
    17,
    160,
    13,
  ],
  Array [
    "measureText",
    "IonMonkey",
  ],
  Array [
    "set fillStyle",
    "white",
  ],
  Array [
    "fillText",
    "IonMonkey",
    173,
    27,
  ],
  Array [
    "set fillStyle",
    "#45a1ff",
  ],
  Array [
    "fillRect",
    150,
    33,
    10,
    13,
  ],
  Array [
    "measureText",
    "https://mozilla.org",
  ],
  Array [
    "set fillStyle",
    "white",
  ],
  Array [
    "fillText",
    "…",
    153,
    43,
  ],
  Array [
    "set fillStyle",
    "#45a1ff",
  ],
  Array [
    "fillRect",
    340,
    33,
    10,
    13,
  ],
  Array [
    "set fillStyle",
    "white",
  ],
  Array [
    "fillText",
    "…",
    343,
    43,
  ],
  Array [
    "set fillStyle",
    "#45a1ff",
  ],
  Array [
    "fillRect",
    350,
    34,
    0.100000000000008,
    11,
  ],
  Array [
    "set fillStyle",
    "#ededf0",
  ],
  Array [
    "fillRect",
    149,
    0,
    1,
    300,
  ],
  Array [
    "fillRect",
    0,
    15,
    365,
    1,
  ],
  Array [
    "fillRect",
    0,
    31,
    365,
    1,
  ],
  Array [
    "fillRect",
    0,
    47,
    365,
    1,
  ],
  Array [
    "set fillStyle",
    "#000000",
  ],
  Array [
    "fillText",
    "Interpreter",
    5,
    11,
  ],
  Array [
    "fillText",
    "IonMonkey",
    5,
    27,
  ],
  Array [
    "measureText",
    "Script",
  ],
  Array [
    "fillText",
    "Script",
    5,
    43,
  ],
]
`;

exports[`StackChart matches the snapshot for empty reasons screen 1`] = `
<div
  className="jsTracer"
>
  <div
    className="EmptyReasons"
  >
    <h3>
      The 
      js-tracer
       is empty for “
      Empty
      ”
    </h3>
    <p>
      This thread contains no JS tracer information.
    </p>
  </div>
</div>
`;

exports[`StackChart matches the snapshot for the chart 1`] = `
<div
  className="jsTracer"
>
  <div
    className="jsTracerSettings"
  >
    <ul
      className="jsTracerSettingsList"
    >
      <li
        className="jsTracerSettingsListItem"
      >
        <label
          className="jsTracerSettingsLabel"
        >
          <input
            checked={false}
            className="jsTracerSettingsCheckbox"
            onChange={[Function]}
            type="checkbox"
          />
           Show only self time
        </label>
      </li>
    </ul>
  </div>
  <div
    className="chartViewport"
    onMouseDown={[Function]}
    onWheel={[Function]}
  >
    <div>
      <canvas
        className="chartCanvas jsTracerCanvasFadeIn jsTracerCanvas jsTracerCanvasDrawn"
        onDoubleClick={[Function]}
        onMouseDown={[Function]}
        onMouseMove={[Function]}
        onMouseOut={[Function]}
        onMouseUp={[Function]}
      />
    </div>
    <div
      className="chartViewportShiftScroll hidden"
    >
      Zoom Chart:
      <kbd
        className="chartViewportShiftScrollKbd"
      >
        Shift
      </kbd>
      <kbd
        className="chartViewportShiftScrollKbd"
      >
        Scroll
      </kbd>
    </div>
  </div>
</div>
`;

exports[`StackChart matches the snapshot for the loading screen 1`] = `
<div
  className="jsTracer"
>
  <div
    className="jsTracerSettings"
  >
    <ul
      className="jsTracerSettingsList"
    >
      <li
        className="jsTracerSettingsListItem"
      >
        <label
          className="jsTracerSettingsLabel"
        >
          <input
            checked={false}
            className="jsTracerSettingsCheckbox"
            onChange={[Function]}
            type="checkbox"
          />
           Show only self time
        </label>
      </li>
    </ul>
  </div>
  <div
    className="jsTracerLoader"
  >
    Re-constructing tracing information from
     
    3
     events. This might take a moment.
  </div>
</div>
`;
